update import url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-DB_CONFIG=sample:samplepass@/sample?charset=utf8&parseTime=True&loc=Local
+DB_CONFIG=root:root12345@/samplepdb?charset=utf8&parseTime=True&loc=Local
